Added REST files

--- a/webPage/main.html
+++ b/webPage/main.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-		<title>Billups Coding Test</title>
+		<title>Billups Coding Test - Rock Paper Scissors clone</title>
 		<meta charset="UTF-8" />
 		<script
 		  src="https://code.jquery.com/jquery-3.4.1.js"
