Added choice method

--- a/webPage/main.html
+++ b/webPage/main.html
@@ -20,7 +20,7 @@
       style="width:300px"
       type="text"
       id="rootUrl"
-      value="https://codechallenge.boohma.com"
+      value="http://localhost"
     />
 	
     </br>
